# rin_agent

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  INTEGRATION_EXAMPLES.md  Readme.md  build.rs  docker-compose.yml
.cargo/: config.toml
contract/: Cargo.toml  README.md
contract/src/: config.rs  lib.rs  messages.rs
docs/: unified_generation_quickstart_ko.md
entity/: Cargo.toml
entity/src/: lib.rs  mod.rs  prelude.rs  tb_ai_context.rs  tb_alarm_model.rs  tb_context_to_msg_id.rs  tb_debt_receipt.rs  tb_debtor.rs  tb_discord_ai_context.rs  tb_discord_guilds.rs  tb_discord_message_to_at_context.rs  tb_image_attach_file.rs
gemini_live_api/: Cargo.toml
gemini_live_api/src/service/: mod.rs  socket_client.rs
gemini_live_api/src/types/: enums.rs  live_api_types.rs  mod.rs
manager/: .gitignore  Cargo.toml  README.md
manager/src/: main.rs
manager/src/command/: mod.rs  restart.rs
manager/src/libs/: bulk_logger.rs  find_server.rs  mod.rs
manager/src/service/: manager_service.rs  mod.rs
manager_cli/: Cargo.toml  RATATUI_GUIDE.md  README.md
manager_cli/src/: main.rs
manager_cli/src/command/: contract.rs  mod.rs
manager_cli/src/connection/: communication.rs  mod.rs
manager_cli/src/terminal/: mod.rs
manager_cli/src/terminal/core/: input.rs  mod.rs  terminal.rs
manager_cli/src/terminal/ui/: app.rs  mod.rs
manager_cli/src/terminal/ui/layout/: landing.rs
manager_cli/src/terminal/ui/pages/: mod.rs  redis_keys.rs  redis_pubsub.rs  settings.rs
migration/: Cargo.toml  lib.rs
migration/src/: lib.rs  m20250516_100000_init.rs  m20250516_133959_add_alarm_schema.rs  m20250526_152732_add_thinking_conf_cols.rs  m20250529_170700_add_thinking_cache_cols.rs  m20250530_213902_add_alarm_user.rs  m20250531_073854_modify_alarm.rs  m20250718_074038_add_ai_though_show.rs  m20251230_130434_add_discord_guild.rs  m20251231_165439_add_debt_receipt.rs  m20260101_060734_add_debtor_table.rs  m20260101_150000_add_debt_receipt.rs  main.rs
migration/src/tools/: migration_macro.rs
rin_agent/: .env.sample  Cargo.toml
rin_agent/docs/: unified_generation.md
rin_agent/gemini_live_api/: Cargo.toml
rin_agent/gemini_live_api/src/: lib.rs
rin_agent/gemini_live_api/src/libs/: logger.rs
rin_agent/gemini_live_api/src/service/: socket_client.rs  socket_client_manager.rs
rin_agent/gemini_live_api/src/types/: live_api_types.rs
rin_agent/src/: main.rs
rin_agent/src/api/: get_web_result.rs  google_searching.rs  instances.rs  mod.rs  schedule.rs
rin_agent/src/discord/: discord_bot_manager.rs  utils.rs
rin_agent/src/discord/commands/: gemini_query.rs  leave_voice.rs  lutica_repo.rs  mod.rs
rin_agent/src/discord/voice_handler/: mod.rs  voice_handler.rs
rin_agent/src/gemini/: mod.rs  types.rs  unified_generation.rs  utils.rs
rin_agent/src/gemini/tools/: audio_generate.rs  discord_response.rs  image_generate.rs  mod.rs  searching.rs  web_connect.rs
rin_agent/src/libs/: array_calc.rs  logger.rs  mod.rs  redis_driver.rs  thread_message.rs  voice_session.rs
rin_agent/src/model/db/: driver.rs  mod.rs
rin_agent/src/service/: voice_session_manager.rs
rin_agent/src/setting/: gemini_setting.rs  mod.rs
rin_agent/src/tests/: searching_test.rs  test.rs
rin_agent/src/utils/: mod.rs  split_text.rs
rin_agent/src/web/server/: mod.rs  server.rs
rin_agent/src/web/server/receipt/: mod.rs  register.rs
scripts/: server_start.sh
src/: main.rs
src/api/: get_web_result.rs  google_searching.rs  instances.rs  mod.rs  routers.rs  schedule.rs  searching.rs
src/discord/: constant.rs  discord_bot_manager.rs  mod.rs
src/discord/commands/: gemini_query.rs  join_voice.rs  leave_voice.rs  lping.rs  mod.rs  ping.rs  repo.rs
src/discord/voice/: mod.rs  voice_thread_manager.rs
src/gemini/: gemini_client.rs  mod.rs  types.rs  unified_generation.rs  utils.rs
src/gemini/schema/: enums.rs  live_api_types.rs  mod.rs  types.rs
src/gemini/service/: mod.rs  socket_client.rs  socket_manager.rs
src/gemini/tools/: discord_response.rs  image_generate.rs  mod.rs  searching.rs  set_alarm.rs  web_connect.rs
src/lib/: logger.rs
src/libs/: logger.rs  mod.rs  thread_message.rs  thread_pipelines.rs
src/model/cache/: redis_client.rs
src/model/db/: driver.rs  mod.rs
src/model/db/entity/: ai_context.rs  discord_guilds.rs  mod.rs
src/service/: discord_error_msg.rs  discord_message_service.rs  mod.rs
src/setting/: gemini_setting.rs
src/tests/: gemini_socket_test.rs  mod.rs  test_gemini_cache.rs  test_unified_generation.rs
src/utils/: lazy_awaiter.rs  mod.rs  split_text.rs
src/web/api/: mod.rs  statius.rs
src/web/server/: server.rs
tests/: test.rs
