[package]
name = "rin_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "*" # Removed due to conflict with openssl-sys
rocket = "*"
sea-orm = "*"
dotenv = "*"
tokio = { version = "*", features = ["full"] }
tokio-postgres = "*"
curl = "0.4.47"
lazy_static = "1.5.0"
sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "postgres"] }

