[package]
name = "rin_agent"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "entity",
    "migration",
    ".", # This is the main crate
]

[[bin]]
name = "rin_agent"
path = "src/main.rs"



[dependencies]
serenity = "*" # Removed due to conflict with openssl-sys
rocket = "*"
sea-orm = { version = "*", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
# migration = { path = "migration" } # depends on your needs
entity = { path = "entity" }
dotenv = "*"
tokio = { version = "*", features = ["full"] }
tokio-postgres = "*"
curl = "0.4.47"
lazy_static = "1.5.0"
sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "postgres"] }
reqwest = "0.12.15"
serde_json = "1.0.140"
base64 = "0.22.1"
libc = "0.2.172"
redis = { version = "0.31.0", features = ["tokio-comp","r2d2"] }
r2d2 = "0.8.10"
tokio-tungstenite = "0.26.2"
serde = "1.0.219"
futures-util = "0.3.31"
