[package]
name = "manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
redis = { version = "1.0.2", features = ["tokio-comp","r2d2", "connection-manager"] }
r2d2 = "0.8.10"
rumqttc = "0.25.1"
sysinfo = "0.37.2"
sea-orm = { version = "1.1.19", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
entity = { path = "../entity" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dotenv = "0.15"
contract = { path = "../contract", features = ["mqtt"] }
