[package]
name = "manager_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
contract = { path = "../contract" }
colored = "3.0.0"
futures-util = "0.3.31"
