[package]
name = "manager_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
contract = { path = "../contract" }
colored = "3.0.0"
futures-util = "0.3.31"
ratatui = "0.30"   # TUI 프레임워크
crossterm = "0.29.0" # 터미널 제어 (키 입력, 커서 이동)
anyhow = "1.0"     # 에러 처리
