[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "*"
sea-orm = { version = "*", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
tokio-postgres = "*"
sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "postgres"] }
sea-orm-migration = "*"
tokio = { version = "1", features = ["full"] }
sea-query = { version = "*", features = ["sqlx-postgres"] }
entity = { path = "../entity" }