[package]
name = "rin_agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rin_agent"
path = "src/main.rs"

[dependencies]
serenity = { version = "*", features = ["cache", "framework", "standard_framework", "voice", "http", "native_tls_backend"]}
rocket = { version = "*", features = ["tls", "json"] }
sea-orm = { version = "1.1.19", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
# migration = { path = "../migration" } # depends on your needs
entity = { path = "../entity" }
gemini_live_api= { path = "gemini_live_api" }
contract = { path = "../contract", default-features = false }
dotenv = "*"
tokio = { version = "*", features = ["full"] }
tokio-postgres = "*"
curl = "0.4.49"
lazy_static = "1.5.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres"] }
reqwest = "0.13.1"
serde_json = "1.0.143"
serde ={ version = "1.0.219", features = ["derive"] }
base64 = "0.22.1"
libc = "0.2.175"
redis = { version = "1.0.2", features = ["tokio-comp","r2d2"] }
r2d2 = "0.8.10"
tokio-tungstenite = { version ="0.28.0", features = ["native-tls"] }
futures-util = "0.3.31"
serde-protobuf = "0.8.2"
rs_ervice = {version = "0.1.6" , features=["tokio"] }
time-macros = "0.2.22"
chrono = "0.4.41"
futures = "0.3.31"
songbird = { version = "0.5.0", features = ["serenity"] }
bytes = "1.10.1"
dashmap = "6.1.0"
fred = "10.1.0"
gemini-rust = "1.6.0"

