[package]
name = "gemini_live_api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.140"
base64 = "0.22.1"
tokio = { version = "*", features = ["full"] }
serde = "1.0.219"
serde-protobuf = "0.8.2"
futures-util = "0.3.31"
reqwest = "0.13.1"
tokio-tungstenite = { version ="0.28.0", features = ["rustls-tls-webpki-roots"] }
lazy_static = "1.5.0"
